--- a/login-pages/Login.html
+++ b/login-pages/Login.html
@@ -47,8 +47,12 @@
             
             <!-- Right: Buttons -->
             <div class="navbar__right">
-                <button class="btn-login">Log In</button>
-                <button class="btn-signup">Sign Up</button>
+                <div class="btn-login-corners">
+                    <button class="btn-login">Log In</button>
+                </div>
+                <div class="btn-signup-corners">
+                    <button class="btn-signup">Sign Up</button>
+                </div>
             </div>
         </nav>
 
